Fixing build with JDK11